--- a/src/NetRevision.Web/appsettings.json
+++ b/src/NetRevision.Web/appsettings.json
@@ -3,7 +3,7 @@
     "SelfUrl": "https://localhost:44387"
   },
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5432;Database=NetRevision;User ID=root;Password=myPassword;"
+    "Default": "Host=localhost;Port=5432;Database=NetRevision;User ID=postgres;Password=Cardiff11;"
   },
   "StringEncryption": {
     "DefaultPassPhrase": "jncoZe9w4PSlIw1z"
