--- a/src/NetRevision.DbMigrator/appsettings.json
+++ b/src/NetRevision.DbMigrator/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5432;Database=NetRevision;User ID=root;Password=myPassword;"
+    "Default": "Host=localhost;Port=5432;Database=NetRevision;User ID=postgres;Password=Cardiff11;"
   },
   "OpenIddict": {
     "Applications": {
